--- a/package.json
+++ b/package.json
@@ -15,6 +15,11 @@
     "@types/react-dom": "^18.2.24",
     "astro": "^4.5.18",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-slick": "^0.30.2",
+    "sass": "^1.75.0"
+  },
+  "devDependencies": {
+    "@types/react-slick": "^0.23.13"
   }
 }
